# libXISF

./: .gitignore  CMakeLists.txt  README.md  bytearray.cpp  bytearray.h  libXISF_global.h  libxisf.cpp  libxisf.h  libxisf.pc.in  propertyvariant.cpp  propertyvariant.h  streambuffer.cpp  streambuffer.h  utils.cpp  utils.h  variant.cpp  variant.h
.github/workflows/: main.yml
debian/: changelog  control  copyright  rules
test/: benchmark.cpp  main.cpp  test_lz4.xisf
